Add flickr + IMDb

--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
           </div>
           <nav id="nav">
           <ul class="filter-select">
-            <li><button>German Shepherd</button></li>
-            <li><button>Black Terrier</button></li>
-            <li><button>Border Collie</button></li>
+            <li><button class="flickrButtons">German Shepherd</button></li>
+            <li><button class="flickrButtons">Black Terrier</button></li>
+            <li><button class="flickrButtons">Border Collie</button></li>
           </ul>
         </nav>
         </div>
@@ -39,6 +39,54 @@
 
 </ul>
 </div>
+
+
+
+
+<div class="grid-100">
+        <div class="heading">
+          <h1>My favorite bands and artists from Spotify</h1>
+
+        </div>
+        <nav class="nav">
+        <ul class="filter-select">
+          <li><button class="musicButton1">Rolling Stones</button></li>
+          <li><button class="musicButton2">BMRC</button></li>
+          <li><button class="musicButton3">Howlin' Wolf</button></li>
+        </ul>
+      </nav>
+      </div>
+
+      <div id="gallery2">
+        <ul id="albums">
+       </ul>
+       <ul id="albums2">
+      </ul>
+      <ul id="albums3">
+     </ul>
+      </div>
+
+
+      <div class="heading">
+        <h1>Movies made about Woodstock</h1>
+
+      </div>
+      <nav class="nav">
+      <ul class="filter-select">
+        <li><button class="movieButton1"> Release Date</button></li>
+        <li><button class="movieButton2">Title</button></li>
+      
+      </ul>
+    </nav>
+
+
+      <div id="gallery3">
+      <ul id="albums4">
+
+      </ul>
+
+
+      </div>
 
 
 
