Change Spotify feed

--- a/index.html
+++ b/index.html
@@ -44,14 +44,14 @@
 
 <div class="grid-100">
         <div class="heading">
-          <h1>My favorite bands and artists from Spotify</h1>
+          <h1>My band and on Spotify</h1>
 
         </div>
         <nav class="nav">
         <ul class="filter-select">
-          <li><button class="musicButton1">Rolling Stones</button></li>
-          <li><button class="musicButton2">BMRC</button></li>
-          <li><button class="musicButton3">Howlin' Wolf</button></li>
+          <li><button class="musicButton1">Album Name</button></li>
+          <li><button class="musicButton2">Description</button></li>
+          <!-- <li><button class="musicButton3">Howlin' Wolf</button></li> -->
         </ul>
       </nav>
       </div>
