Delete old code

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <head>
 <meta charset="utf-8">
-<title>Lightgallery</title>
+<title>Public API</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link href="css/lightbox.css" rel="stylesheet">
 <link href="css/main.css" rel="stylesheet">
@@ -44,12 +44,12 @@
 
 <div class="grid-100">
         <div class="heading">
-          <h1>My band and on Spotify</h1>
+          <h1>My band on Spotify</h1>
 
         </div>
         <nav class="nav">
         <ul class="filter-select">
-          <li><button class="musicButton1">Album Name</button></li>
+          <li><button class="musicButton1">Artist</button></li>
           <li><button class="musicButton2">Description</button></li>
           <!-- <li><button class="musicButton3">Howlin' Wolf</button></li> -->
         </ul>
@@ -59,10 +59,8 @@
       <div id="gallery2">
         <ul id="albums">
        </ul>
-       <ul id="albums2">
-      </ul>
-      <ul id="albums3">
-     </ul>
+
+
       </div>
 
 
