Pull in my own photos from flickr + filter out Spotify albums..
..cont…..filter out Spotify albums that are not FireBug albums/songs…

--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
           </div>
           <nav id="nav">
           <ul class="filter-select">
-            <li><button class="flickrButtons">German Shepherd</button></li>
-            <li><button class="flickrButtons">Black Terrier</button></li>
-            <li><button class="flickrButtons">Border Collie</button></li>
+            <li><button class="button1">Title</button></li>
+            <li><button class="button2">Photo Index</button></li>
+
           </ul>
         </nav>
         </div>
@@ -41,7 +41,6 @@
 
 
 
-
 <div class="grid-100">
         <div class="heading">
           <h1>My band on Spotify</h1>
@@ -49,7 +48,7 @@
         </div>
         <nav class="nav">
         <ul class="filter-select">
-          <li><button class="musicButton1">Artist</button></li>
+          <li><button class="musicButton1">Title</button></li>
           <li><button class="musicButton2">Description</button></li>
           <!-- <li><button class="musicButton3">Howlin' Wolf</button></li> -->
         </ul>
