--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <header id="top">
   <div class="grid-100">
           <div class="heading">
-            <h1>My favorite dog photos from Flickr</h1>
+            <h1>Some of my photos on flickr</h1>
 
           </div>
           <nav id="nav">
